mightve fixed jump menu issues.. i think

--- a/styles/7_transition.css
+++ b/styles/7_transition.css
@@ -11,6 +11,9 @@
     padding-top: 10px;
     margin-bottom: 0;
     background-color: orange;
+    padding-left: 0;
+    list-style-type: none;
+    text-align: center;
 }
 #recentArticles:hover + #jumpMenu, #jumpMenu:hover {
     display: block;
